--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -78,37 +79,39 @@
                         webdesigner
                     </h3>
                     <div class="container twoButtons">
-                            <a  href="#contact">
-                                <span>HIRE <br> ME</span> 
-                                <img src="public/images/bubbleBtn.png" alt="contact" />
-                            </a>  
-                            <a  href="#">
-                                <span>MY <br> CV</span> 
-                                <img src="public/images/bubbleBtn.png" alt="contact" />
-                            </a>                         
-                        
-
-                    </div>
-                   
-                </div>
-
-                <div id="social">
-                    <div class="container">
-                        <span data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="600"><a href="#"
-                                class="fa fa-facebook"></a></span>
-                        <span data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="600"><a href="#"
-                                class="fa fa-twitter"></a></span>
-                        <span data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="600"><a href="#"
-                                class="fa fa-linkedin"></a></span>
-                        <span data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="600"><a href="#"
-                                class="fa fa-github"></a></span>
-                        <span data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="600"><a href="#"
-                                class="fa fa-instagram"></a></span>
-                        <span data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="600"><a href="#"
-                                class="fa fa-pinterest"></a></span>
-
+                        <div>
+                            <a  href="#contact">HIRE <br> ME </a>  
+                            <img src="public/images/bubbleBtn.png" alt="contact" />
+                        </div>
+                        <div>
+                            <a  href="#contact">MY <br> CV</a>  
+                            <img src="public/images/bubbleBtn.png" alt="contact" />
+                        </div>   
                     </div>
                 </div>
+
+                <div class="container wrapper">
+                    <div class="icon facebook">
+                      <div class="tooltip">Facebook</div>
+                      <span><i class="fab fa-facebook-f"></i></span>
+                    </div>
+                    <div class="icon twitter">
+                      <div class="tooltip">Twitter</div>
+                      <span><i class="fab fa-twitter"></i></span>
+                    </div>
+                    <div class="icon instagram">
+                      <div class="tooltip">Instagram</div>
+                      <span><i class="fab fa-instagram"></i></span>
+                    </div>
+                    <div class="icon github">
+                      <div class="tooltip">Github</div>
+                      <span><i class="fab fa-github"></i></span>
+                    </div>
+                    <div class="icon youtube">
+                      <div class="tooltip">Youtube</div>
+                      <span><i class="fab fa-youtube"></i></span>
+                    </div>
+                  </div>
             </div>
         </div>
         <div class="section mt-3" data-aos="fade-up" id="apropos">
