--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                             <img src="public/images/bubbleBtn.png" alt="contact" />
                         </div>
                         <div>
-                            <a  href="#contact">MY <br> CV</a>  
-                            <img src="public/images/bubbleBtn.png" alt="contact" />
+                            <a  href="#">MY <br> CV</a>  
+                            <img src="public/images/bubbleBtn.png" alt="cv" />
                         </div>   
                     </div>
                 </div>
