--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="section" id="header">
         <nav class="navbar navbar-expand-md fixed-top">
             <div class="container">
-                <a class="logo text-nowrap" href="#header">OumCreation</a>
+                <a class="logo text-nowrap" href="#header"><img src="public/images/logoBlue.png" /></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon text-secondary"></span>
                 </button>
