--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="section" id="header">
         <nav class="navbar navbar-expand-md fixed-top">
             <div class="container">
-                <a class="logo text-nowrap" href="#header"><img src="public/images/logoBlue.png" /></a>
+                <a class="logo text-nowrap" href="#header"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon text-secondary"></span>
                 </button>
@@ -446,7 +446,7 @@
                 <div class="h4 text-center mb-4 title mt-4 ">Work Experience</div>
                 <div class="card">
                     <div class="row">
-                        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50"
+                        <div class=" col-md-3 " data-aos="fade-right" data-aos-offset="50"
                             data-aos-duration="500">
                             <div class="card-body cc-experience-header">
                                 <p>March 2016 - Present</p>
