--- a/index.html
+++ b/index.html
@@ -446,14 +446,14 @@
                 <div class="h4 text-center mb-4 title mt-4 ">Work Experience</div>
                 <div class="card">
                     <div class="row">
-                        <div class=" col-md-3 " data-aos="fade-right" data-aos-offset="50"
+                        <div class="cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50"
                             data-aos-duration="500">
                             <div class="card-body cc-experience-header">
                                 <p>March 2016 - Present</p>
                                 <div class="h5">CreativeM</div>
                             </div>
                         </div>
-                        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                        <div class="cardbg col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                             <div class="card-body">
                                 <div class="h5">Front End Developer</div>
                                 <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna
@@ -469,7 +469,7 @@
                 </div>
                 <div class="card">
                     <div class="row">
-                        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50"
+                        <div class=" cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50"
                             data-aos-duration="500">
                             <div class="card-body cc-experience-header">
                                 <p>April 2014 - March 2016</p>
@@ -492,7 +492,7 @@
                 </div>
                 <div class="card">
                     <div class="row">
-                        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50"
+                        <div class="cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50"
                             data-aos-duration="500">
                             <div class="card-body cc-experience-header">
                                 <p>April 2013 - February 2014</p>
