--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                     <div class="row">
                         <div class="cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50"
                             data-aos-duration="500">
-                            <div class="card-body cc-experience-header">
+                            <div class="cardbg card-body">
                                 <p>March 2016 - Present</p>
                                 <div class="h5">CreativeM</div>
                             </div>
