--- a/index.html
+++ b/index.html
@@ -442,13 +442,13 @@
             </div>
         </div>
         <div class="section" id="experience">
-            <div class="container cc-experience">
+            <div class="container">
                 <div class="h4 text-center mb-4 title mt-4 ">Work Experience</div>
                 <div class="card">
-                    <div class="row">
-                        <div class="cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50"
+                    <div  class="row">
+                        <div  class="cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50"
                             data-aos-duration="500">
-                            <div class="cardbg card-body">
+                            <div class="card-body">
                                 <p>March 2016 - Present</p>
                                 <div class="h5">CreativeM</div>
                             </div>
