--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                 <div class="h4 text-center mb-4 title mt-4 ">Work Experience</div>
                 <div class="card">
                     <div  class="row">
-                        <div  class="cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50"
+                        <div  class="bg-blue cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50"
                             data-aos-duration="500">
                             <div class="card-body">
                                 <p>March 2016 - Present</p>
