--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link href="public/css/main.css" rel="stylesheet">
+    <link href="public/css/bootstrap.css" rel="stylesheet">
     
     <!-- DES ANIMATIONS AU SCROLL AVEC AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -446,7 +447,7 @@
                 <div class="h4 text-center mb-4 title mt-4 ">Work Experience</div>
                 <div class="card">
                     <div  class="row">
-                        <div  class="bg-blue cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50"
+                        <div  class="bg-orange cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50"
                             data-aos-duration="500">
                             <div class="card-body">
                                 <p>March 2016 - Present</p>
