--- a/index.html
+++ b/index.html
@@ -442,19 +442,19 @@
                 </div>
             </div>
         </div>
-        <div class="section" id="experience">
+        <div class=" section" id="experience">
             <div class="container">
                 <div class="h4 text-center mb-4 title mt-4 ">Work Experience</div>
-                <div class="card">
+                <div  class="card">
                     <div  class="row">
-                        <div  class="bg-orange cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50"
+                        <div  class=" cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50"
                             data-aos-duration="500">
-                            <div class="card-body">
+                            <div class="card-body text-light">
                                 <p>March 2016 - Present</p>
                                 <div class="h5">CreativeM</div>
                             </div>
                         </div>
-                        <div class="cardbg col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                        <div class=" col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                             <div class="card-body">
                                 <div class="h5">Front End Developer</div>
                                 <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna
@@ -472,7 +472,7 @@
                     <div class="row">
                         <div class=" cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50"
                             data-aos-duration="500">
-                            <div class="card-body cc-experience-header">
+                            <div class="card-body text-light">
                                 <p>April 2014 - March 2016</p>
                                 <div class="h5">WebNote</div>
                             </div>
@@ -495,7 +495,7 @@
                     <div class="row">
                         <div class="cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50"
                             data-aos-duration="500">
-                            <div class="card-body cc-experience-header">
+                            <div class="card-body text-light">
                                 <p>April 2013 - February 2014</p>
                                 <div class="h5">WEBM</div>
                             </div>
