--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link href="public/css/main.css" rel="stylesheet">
     <link href="public/css/bootstrap.css" rel="stylesheet">
-    
+
     <!-- DES ANIMATIONS AU SCROLL AVEC AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Oumaima Creation CV</title>
@@ -82,38 +82,38 @@
                     </h3>
                     <div class="container twoButtons">
                         <div>
-                            <a  href="#contact">HIRE <br> ME </a>  
+                            <a href="#contact">HIRE <br> ME </a>
                             <img src="public/images/bubbleBtn.png" alt="contact" />
                         </div>
                         <div>
-                            <a  href="#">MY <br> CV</a>  
+                            <a href="#">MY <br> CV</a>
                             <img src="public/images/bubbleBtn.png" alt="cv" />
-                        </div>   
+                        </div>
                     </div>
                 </div>
 
                 <div class="container wrapper">
                     <div class="icon facebook">
-                      <div class="tooltip">Facebook</div>
-                      <span><i class="fab fa-facebook-f"></i></span>
+                        <div class="tooltip">Facebook</div>
+                        <span><i class="fab fa-facebook-f"></i></span>
                     </div>
                     <div class="icon twitter">
-                      <div class="tooltip">Twitter</div>
-                      <span><i class="fab fa-twitter"></i></span>
+                        <div class="tooltip">Twitter</div>
+                        <span><i class="fab fa-twitter"></i></span>
                     </div>
                     <div class="icon instagram">
-                      <div class="tooltip">Instagram</div>
-                      <span><i class="fab fa-instagram"></i></span>
+                        <div class="tooltip">Instagram</div>
+                        <span><i class="fab fa-instagram"></i></span>
                     </div>
                     <div class="icon github">
-                      <div class="tooltip">Github</div>
-                      <span><i class="fab fa-github"></i></span>
+                        <div class="tooltip">Github</div>
+                        <span><i class="fab fa-github"></i></span>
                     </div>
                     <div class="icon youtube">
-                      <div class="tooltip">Youtube</div>
-                      <span><i class="fab fa-youtube"></i></span>
+                        <div class="tooltip">Youtube</div>
+                        <span><i class="fab fa-youtube"></i></span>
                     </div>
-                  </div>
+                </div>
             </div>
         </div>
         <div class="section mt-3" data-aos="fade-up" id="apropos">
@@ -166,82 +166,57 @@
                 <div class="h4 text-center mb-4 title mt-4">Professional Skills</div>
                 <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                     <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="progress-container progress-primary">
-                                    <span class="progress-badge">HTML</span>
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-primary" data-aos="progress-full"
-                                            data-aos-offset="10" data-aos-duration="2000" role="progressbar"
-                                            aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-                                            style="width: 80%;">
-                                        </div>
-                                        <span class="progress-value">80%</span>
-                                    </div>
+                        <ul class="skills-bar-container">
+                            <li>
+                                <div class="progressbar-title">
+                                    <h3>HTML5</h3>
+                                    <span class="percent" id="html-pourcent"></span>
                                 </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="progress-container progress-primary">
-                                    <span class="progress-badge">CSS</span>
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-primary" data-aos="progress-full"
-                                            data-aos-offset="10" data-aos-duration="2000" role="progressbar"
-                                            aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-                                            style="width: 75%;">
-                                        </div>
-                                        <span class="progress-value">75%</span>
-                                    </div>
+                                <div class="bar-container">
+                                    <span class="progressbar progressred" id="progress-html"></span>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="progress-container progress-primary">
-                                    <span class="progress-badge">JavaScript</span>
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-primary" data-aos="progress-full"
-                                            data-aos-offset="10" data-aos-duration="2000" role="progressbar"
-                                            aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-                                            style="width: 60%;"></div><span class="progress-value">60%</span>
-                                    </div>
+                            </li>
+                            <li>
+                                <div class="progressbar-title">
+                                    <h3>CSS / SASS</h3>
+                                    <span class="percent" id="css-pourcent"></span>
                                 </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="progress-container progress-primary"><span
-                                        class="progress-badge">SASS</span>
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-primary" data-aos="progress-full"
-                                            data-aos-offset="10" data-aos-duration="2000" role="progressbar"
-                                            aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-                                            style="width: 60%;"></div><span class="progress-value">60%</span>
-                                    </div>
+                                <div class="bar-container">
+                                    <span class="progressbar progressblue" id="progress-css"></span>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="progress-container progress-primary"><span
-                                        class="progress-badge">Bootstrap</span>
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-primary" data-aos="progress-full"
-                                            data-aos-offset="10" data-aos-duration="2000" role="progressbar"
-                                            aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-                                            style="width: 75%;"></div><span class="progress-value">75%</span>
-                                    </div>
+                            </li>
+
+                            <li>
+                                <div class="progressbar-title">
+                                    <h3>JavaScript / jQuery</h3>
+                                    <span class="percent" id="javascript-pourcent"></span>
                                 </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="progress-container progress-primary"><span
-                                        class="progress-badge">Photoshop</span>
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-primary" data-aos="progress-full"
-                                            data-aos-offset="10" data-aos-duration="2000" role="progressbar"
-                                            aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-                                            style="width: 70%;"></div><span class="progress-value">70%</span>
-                                    </div>
+                                <div class="bar-container">
+                                    <span class="progressbar progresspurple" id="progress-javascript"></span>
                                 </div>
-                            </div>
-                        </div>
+                            </li>
+
+                            <li>
+                                <div class="progressbar-title">
+                                    <h3>PHP</h3>
+                                    <span class="percent" id="php-pourcent"></span>
+                                </div>
+                                <div class="bar-container">
+                                    <span class="progressbar progressorange" id="progress-php"></span>
+                                </div>
+                            </li>
+
+                            <li>
+                                <div class="progressbar-title">
+                                    <h3>AngularJS</h3>
+                                    <span class="percent" id="angular-pourcent"></span>
+                                </div>
+                                <div class="bar-container">
+                                    <span class="progressbar progressgreen" id="progress-angular"></span>
+                                </div>
+                            </li>
+
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -445,9 +420,9 @@
         <div class=" section" id="experience">
             <div class="container">
                 <div class="h4 text-center mb-4 title mt-4 ">Work Experience</div>
-                <div  class="card">
-                    <div  class="row">
-                        <div  class=" cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50"
+                <div class="card">
+                    <div class="row">
+                        <div class=" cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50"
                             data-aos-duration="500">
                             <div class="card-body text-light">
                                 <p>March 2016 - Present</p>
