--- a/index.html
+++ b/index.html
@@ -165,59 +165,57 @@
             <div class="container">
                 <div class="h4 text-center mb-4 title mt-4">Professional Skills</div>
                 <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                    <div class="card-body">
-                        <ul class="skills-bar-container">
-                            <li>
-                                <div class="progressbar-title">
-                                    <h3>HTML5</h3>
-                                    <span class="percent" id="html-pourcent"></span>
-                                </div>
-                                <div class="bar-container">
-                                    <span class="progressbar progressred" id="progress-html"></span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="progressbar-title">
-                                    <h3>CSS / SASS</h3>
-                                    <span class="percent" id="css-pourcent"></span>
-                                </div>
-                                <div class="bar-container">
-                                    <span class="progressbar progressblue" id="progress-css"></span>
-                                </div>
-                            </li>
+                    <ul class=" skills-bar-container">
+                        <li>
+                            <div class="progressbar-title">
+                                <h3>HTML5</h3>
+                                <span class="percent" id="html-pourcent"></span>
+                            </div>
+                            <div class="bar-container">
+                                <span class="progressbar progressred" id="progress-html"></span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="progressbar-title">
+                                <h3>CSS / SASS</h3>
+                                <span class="percent" id="css-pourcent"></span>
+                            </div>
+                            <div class="bar-container">
+                                <span class="progressbar progressblue" id="progress-css"></span>
+                            </div>
+                        </li>
 
-                            <li>
-                                <div class="progressbar-title">
-                                    <h3>JavaScript / jQuery</h3>
-                                    <span class="percent" id="javascript-pourcent"></span>
-                                </div>
-                                <div class="bar-container">
-                                    <span class="progressbar progresspurple" id="progress-javascript"></span>
-                                </div>
-                            </li>
+                        <li>
+                            <div class="progressbar-title">
+                                <h3>JavaScript / jQuery</h3>
+                                <span class="percent" id="javascript-pourcent"></span>
+                            </div>
+                            <div class="bar-container">
+                                <span class="progressbar progresspurple" id="progress-javascript"></span>
+                            </div>
+                        </li>
 
-                            <li>
-                                <div class="progressbar-title">
-                                    <h3>PHP</h3>
-                                    <span class="percent" id="php-pourcent"></span>
-                                </div>
-                                <div class="bar-container">
-                                    <span class="progressbar progressorange" id="progress-php"></span>
-                                </div>
-                            </li>
+                        <li>
+                            <div class="progressbar-title">
+                                <h3>PHP</h3>
+                                <span class="percent" id="php-pourcent"></span>
+                            </div>
+                            <div class="bar-container">
+                                <span class="progressbar progressorange" id="progress-php"></span>
+                            </div>
+                        </li>
 
-                            <li>
-                                <div class="progressbar-title">
-                                    <h3>AngularJS</h3>
-                                    <span class="percent" id="angular-pourcent"></span>
-                                </div>
-                                <div class="bar-container">
-                                    <span class="progressbar progressgreen" id="progress-angular"></span>
-                                </div>
-                            </li>
+                        <li>
+                            <div class="progressbar-title">
+                                <h3>React Js</h3>
+                                <span class="percent" id="react-js-pourcent"></span>
+                            </div>
+                            <div class="bar-container">
+                                <span class="progressbar progressgreen" id="progress-react"></span>
+                            </div>
+                        </li>
 
-                        </ul>
-                    </div>
+                    </ul>
                 </div>
             </div>
         </div>
