--- a/index.html
+++ b/index.html
@@ -165,57 +165,51 @@
             <div class="container">
                 <div class="h4 text-center mb-4 title mt-4">Professional Skills</div>
                 <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                    <ul class=" skills-bar-container">
-                        <li>
-                            <div class="progressbar-title">
-                                <h3>HTML5</h3>
-                                <span class="percent" id="html-pourcent"></span>
-                            </div>
-                            <div class="bar-container">
-                                <span class="progressbar progressred" id="progress-html"></span>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="progressbar-title">
-                                <h3>CSS / SASS</h3>
-                                <span class="percent" id="css-pourcent"></span>
-                            </div>
-                            <div class="bar-container">
-                                <span class="progressbar progressblue" id="progress-css"></span>
-                            </div>
-                        </li>
-
-                        <li>
-                            <div class="progressbar-title">
-                                <h3>JavaScript / jQuery</h3>
-                                <span class="percent" id="javascript-pourcent"></span>
-                            </div>
-                            <div class="bar-container">
-                                <span class="progressbar progresspurple" id="progress-javascript"></span>
-                            </div>
-                        </li>
-
-                        <li>
-                            <div class="progressbar-title">
-                                <h3>PHP</h3>
-                                <span class="percent" id="php-pourcent"></span>
-                            </div>
-                            <div class="bar-container">
-                                <span class="progressbar progressorange" id="progress-php"></span>
-                            </div>
-                        </li>
-
-                        <li>
-                            <div class="progressbar-title">
-                                <h3>React Js</h3>
-                                <span class="percent" id="react-js-pourcent"></span>
-                            </div>
-                            <div class="bar-container">
-                                <span class="progressbar progressgreen" id="progress-react"></span>
-                            </div>
-                        </li>
-
-                    </ul>
+                    <!-- First bar -->
+                    <div class="progress-bar" data-percentage="55%">
+                        <h4 class="progress-title-holder">
+                            <span class="progress-title">Photoshop</span>
+                            <span class="progress-number-wrapper">
+                                <span class="progress-number-mark">
+                                    <span class="percent"></span>
+                                    <span class="down-arrow"></span>
+                                </span>
+                            </span>
+                        </h4>
+                        <div class="progress-content-outter">
+                            <div class="progress-content"></div>
+                        </div>
+                    </div>
+                    <!-- Second bar -->
+                    <div class="progress-bar" data-percentage="75%">
+                        <h4 class="progress-title-holder clearfix">
+                            <span class="progress-title">Illustrator</span>
+                            <span class="progress-number-wrapper">
+                                <span class="progress-number-mark">
+                                    <span class="percent"></span>
+                                    <span class="down-arrow"></span>
+                                </span>
+                            </span>
+                        </h4>
+                        <div class="progress-content-outter">
+                            <div class="progress-content"></div>
+                        </div>
+                    </div>
+                    <!-- Third bar -->
+                    <div class="progress-bar" data-percentage="100%">
+                        <h4 class="progress-title-holder clearfix">
+                            <span class="progress-title">InDesign</span>
+                            <span class="progress-number-wrapper">
+                                <span class="progress-number-mark">
+                                    <span class="percent"></span>
+                                    <span class="down-arrow"></span>
+                                </span>
+                            </span>
+                        </h4>
+                        <div class="progress-content-outter">
+                            <div class="progress-content"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
