--- a/index.html
+++ b/index.html
@@ -164,7 +164,58 @@
         <div class="section" id="competences">
             <div class="container">
                 <div class="h4 text-center mb-4 title mt-4">Professional Skills</div>
-                <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                <div class="row card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                    <ul class=" skills-bar-container">
+                        <li>
+                            <div class="progressbar-title">
+                                <h3>HTML5</h3>
+                                <span class="percent" id="html-pourcent"></span>
+                            </div>
+                            <div class="bar-container">
+                                <span class="progressbar progressred" id="progress-html"></span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="progressbar-title">
+                                <h3>CSS / SASS</h3>
+                                <span class="percent" id="css-pourcent"></span>
+                            </div>
+                            <div class="bar-container">
+                                <span class="progressbar progressblue" id="progress-css"></span>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="progressbar-title">
+                                <h3>JavaScript / jQuery</h3>
+                                <span class="percent" id="javascript-pourcent"></span>
+                            </div>
+                            <div class="bar-container">
+                                <span class="progressbar progresspurple" id="progress-javascript"></span>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="progressbar-title">
+                                <h3>PHP</h3>
+                                <span class="percent" id="php-pourcent"></span>
+                            </div>
+                            <div class="bar-container">
+                                <span class="progressbar progressorange" id="progress-php"></span>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="progressbar-title">
+                                <h3>React Js</h3>
+                                <span class="percent" id="react-js-pourcent"></span>
+                            </div>
+                            <div class="bar-container">
+                                <span class="progressbar progressgreen" id="progress-react"></span>
+                            </div>
+                        </li>
+
+                    </ul>
                     <ul class=" skills-bar-container">
                         <li>
                             <div class="progressbar-title">
