--- a/index.html
+++ b/index.html
@@ -173,16 +173,9 @@
                                 <span class="percent" id="html-pourcent"></span>
                             </div>
                             <div class="bar-container">
+                                <!-- <span class="progressbar progressred" id="progress-html"></span> -->
                                 <span class="progressbar progressred" id="progress-html"></span>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="progressbar-title">
-                                <h3>HTML5</h3>
-                                <span class="percent" id="html-pourcent"></span>
-                            </div>
-                            <div class="bar-container">
-                                <span class="progressbar progressred" id="progress-html"></span>
+
                             </div>
                         </li>
                         <li>
