--- a/index.html
+++ b/index.html
@@ -164,9 +164,8 @@
         <div class="section" id="competences">
             <div class="container">
                 <div class="h4 text-center mb-4 title mt-4">Professional Skills</div>
-                <div class="row card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                    <ul class=" skills-bar-container">
-                       
+                <div class=" row card " data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                    <ul class="col-lg-6 col-md-6 col-sm-6 col-xs-6 skills-bar-container">                       
                         <li>
                             <div class="progressbar-title">
                                 <h3>HTML5</h3>
@@ -217,9 +216,26 @@
                                 <span class="progressbar progressgreen" id="progress-react"></span>
                             </div>
                         </li>
-
+                        <li>
+                            <div class="progressbar-title">
+                                <h3>React native</h3>
+                                <span class="percent" id="react-js-pourcent"></span>
+                            </div>
+                            <div class="bar-container">
+                                <span class="progressbar progressgreen" id="progress-react"></span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="progressbar-title">
+                                <h3>React native</h3>
+                                <span class="percent" id="react-js-pourcent"></span>
+                            </div>
+                            <div class="bar-container">
+                                <span class="progressbar progressgreen" id="progress-react"></span>
+                            </div>
+                        </li>
                     </ul>
-                    <ul class=" skills-bar-container">
+                    <ul class="col-lg-6 col-md-6 col-sm-6 col-xs-6 skills-bar-container">
                         <li>
                             <div class="progressbar-title">
                                 <h3>HTML5</h3>
