--- a/index.html
+++ b/index.html
@@ -163,25 +163,22 @@
         </div>
         <div class="section" id="competences">
             <div class="container">
-                <div class="h4 text-center mb-4 title mt-4">Professional Skills</div>
-                <div class="container">
-                    <div class="row card" data-aos="fade-up"
+                <div class="h4 text-center mb-4 title mt-4">Professional Skills</div>                
+                    <div class="flexrow card container-skills"  data-aos="fade-up"
                         data-aos-anchor-placement="top-bottom">
                         <ul class=" col-lg-6 col-md-6 col-sm-12 skills-bar-container">
                             <li>
                                 <div class="progressbar-title">
-                                    <h3>HTML5</h3>
+                                    <span>HTML5</span>
                                     <span class="percent" id="html-pourcent"></span>
                                 </div>
-                                <div class="bar-container">
-                                    <!-- <span class="progressbar progressred" id="progress-html"></span> -->
+                                <div class="bar-container">                                   
                                     <span class="progressbar progressred" id="progress-html"></span>
-
                                 </div>
                             </li>
                             <li>
                                 <div class="progressbar-title">
-                                    <h3>CSS / SASS</h3>
+                                    <span>CSS / SASS</span>
                                     <span class="percent" id="css-pourcent"></span>
                                 </div>
                                 <div class="bar-container">
@@ -191,7 +188,7 @@
 
                             <li>
                                 <div class="progressbar-title">
-                                    <h3>JavaScript / jQuery</h3>
+                                    <span>JavaScript / jQuery</span>
                                     <span class="percent" id="javascript-pourcent"></span>
                                 </div>
                                 <div class="bar-container">
@@ -201,7 +198,7 @@
 
                             <li>
                                 <div class="progressbar-title">
-                                    <h3>PHP</h3>
+                                    <span>PHP</span>
                                     <span class="percent" id="php-pourcent"></span>
                                 </div>
                                 <div class="bar-container">
@@ -211,36 +208,19 @@
 
                             <li>
                                 <div class="progressbar-title">
-                                    <h3>React Js</h3>
+                                    <span>React Js</span>
                                     <span class="percent" id="react-js-pourcent"></span>
                                 </div>
                                 <div class="bar-container">
                                     <span class="progressbar progressgreen" id="progress-react"></span>
                                 </div>
                             </li>
-                            <li>
-                                <div class="progressbar-title">
-                                    <h3>React native</h3>
-                                    <span class="percent" id="react-js-pourcent"></span>
-                                </div>
-                                <div class="bar-container">
-                                    <span class="progressbar progressgreen" id="progress-react"></span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="progressbar-title">
-                                    <h3>React native</h3>
-                                    <span class="percent" id="react-js-pourcent"></span>
-                                </div>
-                                <div class="bar-container">
-                                    <span class="progressbar progressgreen" id="progress-react"></span>
-                                </div>
-                            </li>
+                            
                         </ul>
                         <ul class="col-lg-6 col-md-6 col-sm-12 skills-bar-container">
                             <li>
                                 <div class="progressbar-title">
-                                    <h3>HTML5</h3>
+                                    <span>HTML5</span>
                                     <span class="percent" id="html-pourcent"></span>
                                 </div>
                                 <div class="bar-container">
@@ -249,7 +229,7 @@
                             </li>
                             <li>
                                 <div class="progressbar-title">
-                                    <h3>CSS / SASS</h3>
+                                    <span>CSS / SASS</span>
                                     <span class="percent" id="css-pourcent"></span>
                                 </div>
                                 <div class="bar-container">
@@ -259,7 +239,7 @@
 
                             <li>
                                 <div class="progressbar-title">
-                                    <h3>JavaScript / jQuery</h3>
+                                    <span>JavaScript / jQuery</span>
                                     <span class="percent" id="javascript-pourcent"></span>
                                 </div>
                                 <div class="bar-container">
@@ -269,7 +249,7 @@
 
                             <li>
                                 <div class="progressbar-title">
-                                    <h3>PHP</h3>
+                                    <span>PHP</span>
                                     <span class="percent" id="php-pourcent"></span>
                                 </div>
                                 <div class="bar-container">
@@ -279,7 +259,7 @@
 
                             <li>
                                 <div class="progressbar-title">
-                                    <h3>React Js</h3>
+                                    <span>React Js</span>
                                     <span class="percent" id="react-js-pourcent"></span>
                                 </div>
                                 <div class="bar-container">
@@ -290,7 +270,7 @@
                         </ul>
                     </div>
                 </div>
-            </div>
+            
         </div>
         <div class="section" id="portfolio">
             <div class="container">
