--- a/index.html
+++ b/index.html
@@ -639,10 +639,12 @@
 
 
     <!-- DES ANIMATIONS AU SCROLL AVEC AOS -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="public/js/main.js"></script>
+    <script src="public/js/bootstrap.min.js"></script>
+    <script src="public/js/aos-2.3.1.js"></script>
+    <script src="public/js/jquery-3.6.0.min.js"></script>
     <script src="public/js/parallax.min.js"></script>
+    <script src="public/js/main.js"></script>
+    
 
 
 </body>
