--- a/index.html
+++ b/index.html
@@ -638,10 +638,11 @@
     <a href="#header" class="back-to-top"><img src="./public/images/arrow_up.png"></i></a>
 
 
-    <!-- DES ANIMATIONS AU SCROLL AVEC AOS -->
-    <script src="public/js/bootstrap.min.js"></script>
-    <script src="public/js/aos-2.3.1.js"></script>
+    <!-- DES ANIMATIONS AU SCROLL AVEC AOS --> 
     <script src="public/js/jquery-3.6.0.min.js"></script>
+    <script src="public/js/popper-1.12.9.js"></script>    
+    <script src="public/js/bootstrap.min.js"></script>
+    <script src="public/js/aos-2.3.1.js"></script>   
     <script src="public/js/parallax.min.js"></script>
     <script src="public/js/main.js"></script>
     
